# rover

./: README.md
Arduino/Motors/main/: motor_controller.h
Arduino/Motors/test_1/: test_1.ino
GUI/: README.md  ble_test_windows.py  bt_client.py  gui.py  widgets.py
arduino/motors/main/: i2c_manager.h  main.ino  motor_controller.h
arduino/motors/motor_driver_test/: motor_driver_test.ino
external_dependencies/: .gitignore  README.md
raspberry_pi/: CMakeLists.txt  Dockerfile  cross_compile_entrypoint.sh  raspi_deployment.sh  toolchain-rpi.cmake
raspberry_pi/external_dependencies/: README.md
raspberry_pi/external_dependencies/bluetoothctl/: bluetooth-discoverable.service  bluetooth_discoverable.sh
raspberry_pi/i2c_communication/: CMakeLists.txt
raspberry_pi/i2c_communication/include/: i2c_bus.hpp  i2c_device.hpp
raspberry_pi/i2c_communication/src/: i2c_bus.cpp  i2c_device.cpp  i2c_interface  i2c_interface.cpp
raspberry_pi/i2c_communication/test/: i2c_test.cpp
raspberry_pi/logger/: CMakeLists.txt  logger.cpp  logger.h
raspberry_pi/ros2_central_ws/: .gitignore  README.md
raspberry_pi/ros2_central_ws/launch/: README.md  ros2_launch.service  rover_launch.py
raspberry_pi/ros2_central_ws/src/bt_comms/: package.xml  setup.cfg  setup.py
raspberry_pi/ros2_central_ws/src/bt_comms/bt_comms/: ble_test.py
raspberry_pi/ros2_central_ws/src/bt_manager/: package.xml  setup.cfg  setup.py
raspberry_pi/ros2_central_ws/src/bt_manager/bt_manager/: bt_manager.py  bt_server.py  find_bt_devices.py
raspberry_pi/ros2_central_ws/src/i2c_manager/: CMakeLists.txt  package.xml
raspberry_pi/ros2_central_ws/src/i2c_manager/include/i2c_manager/: i2c_device.hpp
raspberry_pi/ros2_central_ws/src/i2c_manager/src/: i2c_bus.cpp  i2c_device.cpp  i2c_manager.cpp
raspberry_pi/ros2_central_ws/src/interfaces/: CMakeLists.txt  package.xml
raspberry_pi/ros2_central_ws/src/interfaces/msg/: I2C.msg  MotorInput.msg
raspberry_pi/ros2_central_ws/src/kb_input_manager/: package.xml  setup.cfg  setup.py
raspberry_pi/ros2_central_ws/src/kb_input_manager/kb_input_manager/: kb_input_manager.py
raspberry_pi/ros2_central_ws/src/motor_manager/: CMakeLists.txt  package.xml
raspberry_pi/ros2_central_ws/src/motor_manager/src/: motor_manager.cpp
raspberry_pi/ros2_central_ws/src/pub_cpp/: CMakeLists.txt  package.xml
raspberry_pi/ros2_central_ws/src/sub_py/: package.xml  setup.cfg  setup.py
